--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <img src="./pics/hp-logo.jpeg" alt="Our Clients">
             </div>
             <div class="client-item">
-                <img src="./pics/Logo2.jpg" alt="Our Clients">
+                <img src="./pics/logo2.jpg" alt="Our Clients">
             </div>
             
             <div class="client-item">
